psterile234-7964041.err
Info in <TUnixSystem::ACLiC>: creating shared library /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.so
sh: /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.d: Permission denied
Warning in <ACLiC>: Failed to generate the dependency file for /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.so
In file included from /tmp/rootcint_2gp7U0.h:4:0,
                 from /tmp/z9mA9z_cint.cxx:1:
/home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_linkdef.h:3:0: error: unterminated #ifdef
 #ifdef __CINT__
 ^
Error: external preprocessing failed. :0:
!!!Removing /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.cxx /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.h !!!
Error: rootcint: failed to rename /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.cxx_+_+_+rootcinttmp to /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.cxx in ReplaceBundleInDict()
/cvmfs/soft.computecanada.ca/nix/store/drh2i7i29npibg7wnwjhpivmpwh9x6ij-binutils-2.28/bin/ld: cannot find /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.o: No such file or directory
collect2: error: ld returned 1 exit status
Error in <ACLiC>: Compilation failed!
Error: Function LikelihoodSterile_modified6(234) is not defined in current scope  :0:
*** Interpreter error recovered ***
